Wed, Oct 3, 2007 Amos Anderson
1.  I added the ability to optimize the cutoff parameter to the 3 body
    Jastrow. Note that the cutoff parameter is counted as a free parameter,
    even if it's not actually optimized.
2.  I added the ability to choose which terms in the 3 body Jastrow we want
    to optimize. You'll have to modify the code if you want to choose differently.
    If you don't run a 3 3 or 4 4 with all possible terms included,
    then it won't work, currently.
3.  I changed the ordering of the 3 body terms in the input file. Old 3 body parameters
    are completely incompatable. However, once you've optimized a 3 3 function, then you
    can easily upgrade it to a 4 4 function, just change the NeN and Nee numbers.

Mon, Sep 17, 2007 Amos Anderson
1.  I added correlated sampling -- the real way. It doesn't require
    anything written to file. This is useful for choosing good
    a_diag values. So set a_diag to something negative, and the
    code will automatically choose a stable a_diag using correlated sampling.

    This only applies to the eigenvector optimization method. The others
    could be added if I get bored.

2.  I changed the parameter for optimizing Jastrow cutoffs so that the
    same parameter is referenced by all Cambridge jastrows.

Wed, Sep 12, 2007 Daniel R Fisher
1.  I changed the way that data is reduced in QMCManager to make sure
    that the timing data is collected and written out when a
    calculation terminates unexpectedly.  Previously this was not
    being done and all the times were zeros.

2.  I fixed a bug in QMCWalker::moveElectronsU93ImpSampling().  If the
    configuration was read in from a checkpoint file, the
    electron-nuclear distances were not filled in yet in
    QMCWalkerData, so it was dividing by zero when it tried to move
    the electrons.

Tues, Sep 11, 2007 Daniel R Fisher
1.  I improved the makeParamDepMatrix() function in
    QMCThreeBodyCorrelationFunctionParameters.  It has a much more